feat: SplitRoute testing

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -433,9 +433,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_24040\\3632634035.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_15808\\3632634035.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_24040\\3632634035.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_15808\\3632634035.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
      ]
     }
@@ -457,6 +457,404 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "84165cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RouteUID</th>\n",
+       "      <th>RouteID</th>\n",
+       "      <th>RouteName_Zh</th>\n",
+       "      <th>RouteName_En</th>\n",
+       "      <th>SubRouteUID</th>\n",
+       "      <th>SubRouteID</th>\n",
+       "      <th>SubRouteName_Zh</th>\n",
+       "      <th>SubRouteName_En</th>\n",
+       "      <th>Direction</th>\n",
+       "      <th>City</th>\n",
+       "      <th>...</th>\n",
+       "      <th>StopName_En</th>\n",
+       "      <th>StopBoarding</th>\n",
+       "      <th>StopSequence</th>\n",
+       "      <th>PositionLon</th>\n",
+       "      <th>PositionLat</th>\n",
+       "      <th>GeoHash</th>\n",
+       "      <th>StationID</th>\n",
+       "      <th>StationGroupID</th>\n",
+       "      <th>LocationCityCode</th>\n",
+       "      <th>FilePath</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>THB0968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>THB096801</td>\n",
+       "      <td>096801</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dajhu Fire Brigade</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>121.261064</td>\n",
+       "      <td>25.018736</td>\n",
+       "      <td>wsqnr6e8e</td>\n",
+       "      <td>136293</td>\n",
+       "      <td>338－086</td>\n",
+       "      <td>TAO</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>THB0968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>THB096801</td>\n",
+       "      <td>096801</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dajhu &amp; Shangsing Intersection</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>121.265103</td>\n",
+       "      <td>25.020252</td>\n",
+       "      <td>wsqnr6y99</td>\n",
+       "      <td>136297</td>\n",
+       "      <td>338－111</td>\n",
+       "      <td>TAO</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>THB0968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>THB096801</td>\n",
+       "      <td>096801</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Shangdajhu</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>121.263100</td>\n",
+       "      <td>25.021580</td>\n",
+       "      <td>wsqnr7j17</td>\n",
+       "      <td>136299</td>\n",
+       "      <td>338－121</td>\n",
+       "      <td>TAO</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>THB0968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>THB096801</td>\n",
+       "      <td>096801</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dajhu</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>121.259340</td>\n",
+       "      <td>25.024130</td>\n",
+       "      <td>wsqnr7d25</td>\n",
+       "      <td>136301</td>\n",
+       "      <td>338－132</td>\n",
+       "      <td>TAO</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>THB0968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>968</td>\n",
+       "      <td>THB096801</td>\n",
+       "      <td>096801</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Nanzhu Rd., Sec. 4, No. 37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>121.270736</td>\n",
+       "      <td>25.031488</td>\n",
+       "      <td>wsqnrsfdu</td>\n",
+       "      <td>136303</td>\n",
+       "      <td>338－143</td>\n",
+       "      <td>TAO</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179098</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Dunhua Metro Bus</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Duhua Metro Bus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taipei</td>\n",
+       "      <td>...</td>\n",
+       "      <td>MRT Liuzhangli Sta. (Heping)</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>121.553535</td>\n",
+       "      <td>25.023243</td>\n",
+       "      <td>wsqqq52df</td>\n",
+       "      <td>2146</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TPE</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179099</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Dunhua Metro Bus</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Duhua Metro Bus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taipei</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Fuyang St. Entrance</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>121.555911</td>\n",
+       "      <td>25.021034</td>\n",
+       "      <td>wsqqq4fq4</td>\n",
+       "      <td>2085</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TPE</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179100</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Dunhua Metro Bus</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Duhua Metro Bus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taipei</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Lizhong Market</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>121.557804</td>\n",
+       "      <td>25.019261</td>\n",
+       "      <td>wsqqq4eey</td>\n",
+       "      <td>2172</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TPE</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179101</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Dunhua Metro Bus</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Duhua Metro Bus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taipei</td>\n",
+       "      <td>...</td>\n",
+       "      <td>MRT Linguang Sta.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>121.558530</td>\n",
+       "      <td>25.018250</td>\n",
+       "      <td>wsqqq4kjz</td>\n",
+       "      <td>2157</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TPE</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179102</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Dunhua Metro Bus</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>Duhua Metro Bus</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taipei</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Linguang</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>121.561041</td>\n",
+       "      <td>25.015473</td>\n",
+       "      <td>wsqqq1yj9</td>\n",
+       "      <td>2182</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TPE</td>\n",
+       "      <td>d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179103 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       RouteUID  RouteID RouteName_Zh      RouteName_En SubRouteUID  \\\n",
+       "0       THB0968      968          968               968   THB096801   \n",
+       "1       THB0968      968          968               968   THB096801   \n",
+       "2       THB0968      968          968               968   THB096801   \n",
+       "3       THB0968      968          968               968   THB096801   \n",
+       "4       THB0968      968          968               968   THB096801   \n",
+       "...         ...      ...          ...               ...         ...   \n",
+       "179098   TPE810      810         敦化幹線  Dunhua Metro Bus      TPE810   \n",
+       "179099   TPE810      810         敦化幹線  Dunhua Metro Bus      TPE810   \n",
+       "179100   TPE810      810         敦化幹線  Dunhua Metro Bus      TPE810   \n",
+       "179101   TPE810      810         敦化幹線  Dunhua Metro Bus      TPE810   \n",
+       "179102   TPE810      810         敦化幹線  Dunhua Metro Bus      TPE810   \n",
+       "\n",
+       "       SubRouteID SubRouteName_Zh  SubRouteName_En  Direction    City  ...  \\\n",
+       "0          096801            0968             0968          0     NaN  ...   \n",
+       "1          096801            0968             0968          0     NaN  ...   \n",
+       "2          096801            0968             0968          0     NaN  ...   \n",
+       "3          096801            0968             0968          0     NaN  ...   \n",
+       "4          096801            0968             0968          0     NaN  ...   \n",
+       "...           ...             ...              ...        ...     ...  ...   \n",
+       "179098        810            敦化幹線  Duhua Metro Bus          1  Taipei  ...   \n",
+       "179099        810            敦化幹線  Duhua Metro Bus          1  Taipei  ...   \n",
+       "179100        810            敦化幹線  Duhua Metro Bus          1  Taipei  ...   \n",
+       "179101        810            敦化幹線  Duhua Metro Bus          1  Taipei  ...   \n",
+       "179102        810            敦化幹線  Duhua Metro Bus          1  Taipei  ...   \n",
+       "\n",
+       "                           StopName_En  StopBoarding StopSequence  \\\n",
+       "0                   Dajhu Fire Brigade             1            1   \n",
+       "1       Dajhu & Shangsing Intersection             1            2   \n",
+       "2                           Shangdajhu             1            3   \n",
+       "3                                Dajhu             1            4   \n",
+       "4           Nanzhu Rd., Sec. 4, No. 37             1            5   \n",
+       "...                                ...           ...          ...   \n",
+       "179098    MRT Liuzhangli Sta. (Heping)            -1           41   \n",
+       "179099             Fuyang St. Entrance             0           42   \n",
+       "179100                  Lizhong Market             0           43   \n",
+       "179101               MRT Linguang Sta.             0           44   \n",
+       "179102                        Linguang             0           45   \n",
+       "\n",
+       "        PositionLon PositionLat    GeoHash StationID StationGroupID  \\\n",
+       "0        121.261064   25.018736  wsqnr6e8e    136293        338－086   \n",
+       "1        121.265103   25.020252  wsqnr6y99    136297        338－111   \n",
+       "2        121.263100   25.021580  wsqnr7j17    136299        338－121   \n",
+       "3        121.259340   25.024130  wsqnr7d25    136301        338－132   \n",
+       "4        121.270736   25.031488  wsqnrsfdu    136303        338－143   \n",
+       "...             ...         ...        ...       ...            ...   \n",
+       "179098   121.553535   25.023243  wsqqq52df      2146            NaN   \n",
+       "179099   121.555911   25.021034  wsqqq4fq4      2085            NaN   \n",
+       "179100   121.557804   25.019261  wsqqq4eey      2172            NaN   \n",
+       "179101   121.558530   25.018250  wsqqq4kjz      2157            NaN   \n",
+       "179102   121.561041   25.015473  wsqqq1yj9      2182            NaN   \n",
+       "\n",
+       "        LocationCityCode                                           FilePath  \n",
+       "0                    TAO  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "1                    TAO  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "2                    TAO  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "3                    TAO  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "4                    TAO  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "...                  ...                                                ...  \n",
+       "179098               TPE  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "179099               TPE  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "179100               TPE  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "179101               TPE  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "179102               TPE  d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\Ticket...  \n",
+       "\n",
+       "[179103 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -474,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "164ae355",
    "metadata": {},
    "outputs": [],
@@ -485,24 +883,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5b4f21eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "只在 df_route 出現的 RouteUID：0\n",
-      "只在 df_seq 出現的 RouteUID：10\n",
-      "兩邊都有的 RouteUID：2025\n",
-      "-----------\n",
-      "只在 df_route 出現的 SubRouteUID：1\n",
-      "只在 df_seq 出現的 SubRouteUID：1372\n",
-      "兩邊都有的 SubRouteUID：2587\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 02 檢查路線\n",
     "text_routeUID, only_in_route_routeUID, only_in_seq_routeUID, in_both_routeUID  =compare_column_values(df_route, df_seq, 'RouteUID', name_a='df_route', name_b='df_seq')\n",
