--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -233,8 +233,7 @@
     "\n",
     "    return output_text, only_in_a, only_in_b, in_both\n",
     "\n",
-    "\n",
-    "# 03 拆分路線   \n",
+    "# 03 拆分路線\n",
     "\n",
     "def snap_points_to_line(\n",
     "    stops_gdf, routes_gdf,\n",
@@ -420,16 +419,9 @@
     "\n",
     "    # 將所有行組成字串\n",
     "    text_report = \"\\n\".join(lines)\n",
-    "    return text_report\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "4658bda7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return text_report\n",
+    "\n",
+    "\n",
     "# 01-01 讀取站序xml\n",
     "def read_seq(busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\")):\n",
     "    # 讀取所有站序 xml，轉存為 csv\n",
@@ -481,7 +473,7 @@
     "    print(f\"已輸出檢查結果到：{output_path}\")\n",
     "    return in_both_subrouteUID\n",
     "\n",
-    "# 03 黏貼站序道路線上\n",
+    "# 03 拆分路線\n",
     "\n",
     "# 03-01 將站序和路線轉為 GeoDataFrame\n",
     "def get_gdfroute_gdfseq(df_route, df_seq):\n",
@@ -496,79 +488,15 @@
     "    gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")\n",
     "\n",
     "    return gdf_route, gdf_seq\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0a78a03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    df_seq = read_seq(busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
-    "    df_route = read_busroute(busroute_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
     "\n",
-    "    in_both_subrouteUID = check_routes_and_save(df_route = df_route, \n",
-    "                                                df_seq = df_seq, \n",
-    "                                                output_path= os.path.abspath(os.path.join(os.getcwd(), '..', '02_初步分析', '票證及路線數據檢查.txt')))\n",
-    "    \n",
-    "    gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7cc6b7da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_376\\3632634035.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_376\\3632634035.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "已輸出檢查結果到：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\02_初步分析\\票證及路線數據檢查.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_seq = read_seq(busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
-    "df_route = read_busroute(busroute_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
-    "\n",
-    "in_both_subrouteUID = check_routes_and_save(df_route = df_route, \n",
-    "                                            df_seq = df_seq, \n",
-    "                                            output_path= os.path.abspath(os.path.join(os.getcwd(), '..', '02_初步分析', '票證及路線數據檢查.txt')))\n",
-    "\n",
-    "gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fc00b9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_splitroute(gdf_route, gdf_seq, in_both_subrouteUID, \n",
-    "                   routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))):\n",
-    "\n",
+    "# 03-02 拆分路線\n",
+    "def get_bySubRouteUID(gdf_route, gdf_seq, in_both_subrouteUID):\n",
     "\n",
     "    # 先處理SubRouteUID 一致的路線\n",
     "    gdf_route_selectbySubRouteUID = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
     "    gdf_seq_selectbySubRouteUID = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
     "\n",
+    "    \n",
     "    # 將公車站序點位投影到路線上\n",
     "    gdf_snapstop_select = snap_points_to_line(gdf_seq_selectbySubRouteUID, gdf_route_selectbySubRouteUID,\n",
     "                                            route_id_col='SubRouteUID',\n",
@@ -593,87 +521,97 @@
     "                                        gdf_seq_selectbySubRouteUID[['RouteUID', 'SubRouteUID', 'Direction', 'StopSequence', 'StopUID', 'StopName_Zh']].rename(columns={'StopUID':'OStopUID', 'StopName_Zh':'OStopName', 'StopSequence':'StartSeq'}).drop_duplicates(subset=['RouteUID', 'SubRouteUID', 'Direction', 'StartSeq']),\n",
     "                                        on=['RouteUID', 'SubRouteUID', 'Direction', 'StartSeq'], how='left')\n",
     "    \n",
+    "    gdf_routesegment_select = pd.merge(gdf_routesegment_select,\n",
+    "                                        gdf_seq_selectbySubRouteUID[['RouteUID', 'SubRouteUID', 'Direction', 'StopSequence', 'StopUID', 'StopName_Zh']].rename(columns={'StopUID':'DStopUID', 'StopName_Zh':'DStopName', 'StopSequence':'EndSeq'}).drop_duplicates(subset=['RouteUID', 'SubRouteUID', 'Direction', 'EndSeq']),\n",
+    "                                        on=['RouteUID', 'SubRouteUID', 'Direction', 'EndSeq'], how='left')\n",
+    "    \n",
     "    gdf_routesegment_select = gdf_routesegment_select.rename(columns = {'RouteName_Zh':'RouteName', 'SubRouteName_Zh':'SubRouteName'})\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2e20da0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 03-02 拆分路線\n",
-    "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
     "\n",
-    "# 先處理SubRouteUID 一致的路線\n",
-    "gdf_route_selectbySubRouteUID = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
-    "gdf_seq_selectbySubRouteUID = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
+    "    return gdf_routesegment_select\n",
     "\n",
-    "# 將公車站序點位投影到路線上\n",
-    "gdf_snapstop_select = snap_points_to_line(gdf_seq_selectbySubRouteUID, gdf_route_selectbySubRouteUID,\n",
-    "                                          route_id_col='SubRouteUID',\n",
-    "                                          route_direction_col='Direction',\n",
-    "                                          seq_id_col='SubRouteUID',\n",
-    "                                          seq_direction_col='Direction',\n",
-    "                                          seq_lat_col='PositionLat',\n",
-    "                                          seq_lng_col='PositionLon')\n",
+    "def get_byRouteUID(gdf_route, gdf_seq, in_both_subrouteUID):\n",
     "\n",
-    "# 依站序拆分路線\n",
-    "gdf_routesegment_select = split_routes(gdf_route_selectbySubRouteUID, gdf_snapstop_select,\n",
-    "                                       route_id_col='SubRouteUID',\n",
-    "                                       route_direction_col='Direction',\n",
-    "                                       seq_id_col='SubRouteUID',\n",
-    "                                       seq_direction_col='Direction',\n",
-    "                                       seq_seq_col='StopSequence')\n",
+    "    gdf_route_others = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)==False]\n",
+    "    gdf_seq_others = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID) == False]\n",
     "\n",
-    "gdf_routesegment_select.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
-    "# gdf_routesegment_select = pd.merge(gdf_routesegment_select,\n",
-    "#                                    gdf_seq_selectbySubRouteUID[['RouteUID', 'RouteName_Zh' ,'SubRouteUID', 'SubRouteName_Zh']].drop_duplicates(subset=['SubRouteUID']),\n",
-    "#                                    on='SubRouteUID', how='left')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe3e5df2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    gdf_snapstop_others = snap_points_to_line(gdf_seq_others, gdf_route_others,\n",
+    "                                            route_id_col='RouteUID',\n",
+    "                                            route_direction_col='Direction',\n",
+    "                                            seq_id_col='RouteUID',\n",
+    "                                            seq_direction_col='Direction',\n",
+    "                                            seq_lat_col='PositionLat',\n",
+    "                                            seq_lng_col='PositionLon')\n",
     "\n",
-    "# # 排除SubRouteUID一致的路線，再針對RouteUID一致的路線進行處理\n",
+    "    gdf_routesegment_others = split_routes(gdf_route_others, gdf_snapstop_others,\n",
+    "                                        route_id_col='RouteUID',\n",
+    "                                        route_direction_col='Direction',\n",
+    "                                        seq_id_col='RouteUID',\n",
+    "                                        seq_direction_col='Direction',\n",
+    "                                        seq_seq_col='StopSequence')\n",
     "\n",
-    "# gdf_route_others = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)==False]\n",
-    "# gdf_seq_others = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID) == False]\n",
+    "    gdf_routesegment_others.rename(columns = {'ID':'RouteUID'}, inplace=True)\n",
     "\n",
-    "# gdf_snapstop_others = snap_points_to_line(gdf_seq_others, gdf_route_others,\n",
-    "#                                           route_id_col='RouteUID',\n",
-    "#                                           route_direction_col='Direction',\n",
-    "#                                           seq_id_col='RouteUID',\n",
-    "#                                           seq_direction_col='Direction',\n",
-    "#                                           seq_lat_col='PositionLat',\n",
-    "#                                           seq_lng_col='PositionLon')\n",
     "\n",
-    "# gdf_routesegment_others = split_routes(gdf_route_others, gdf_snapstop_others,\n",
-    "#                                        route_id_col='RouteUID',\n",
-    "#                                        route_direction_col='Direction',\n",
-    "#                                        seq_id_col='RouteUID',\n",
-    "#                                        seq_direction_col='Direction',\n",
-    "#                                        seq_seq_col='StopSequence')\n",
+    "    gdf_routesegment_others = gdf_routesegment_others.merge(gdf_route_others[['RouteUID', 'RouteName_Zh']].drop_duplicates(), on='RouteUID', how='left')\n",
+    "    gdf_routesegment_others = pd.merge(gdf_routesegment_others , \n",
+    "                                    gdf_seq_others[['RouteUID', 'Direction', 'StopSequence', 'StopUID', 'StopName_Zh']].drop_duplicates().rename(columns = {'StopUID':'OstopUID', 'StopName_Zh':'OStopName',  'StopSequence':'StartSeq'}), \n",
+    "                                    on = ['RouteUID', 'Direction', 'StartSeq'], how = 'left')\n",
+    "    gdf_routesegment_others = pd.merge(gdf_routesegment_others , \n",
+    "                                    gdf_seq_others[['RouteUID', 'Direction', 'StopSequence', 'StopUID', 'StopName_Zh']].drop_duplicates().rename(columns = {'StopUID':'DstopUID', 'StopName_Zh':'DStopName',  'StopSequence':'EndSeq'}), \n",
+    "                                    on = ['RouteUID', 'Direction', 'EndSeq'], how = 'left')\n",
+    "    \n",
+    "    gdf_routesegment_others = gdf_routesegment_others.rename(columns = {'RouteName_Zh':'RouteName'})\n",
     "\n",
-    "# gdf_routesegment_others.rename(columns = {'ID':'RouteUID'}, inplace=True)\n",
-    "# gdf_routesegment_others = gdf_routesegment_others.merge(gdf_route_others[['RouteUID', 'RouteName_Zh']].drop_duplicates(), on='RouteUID', how='left')\n",
+    "    return gdf_routesegment_others\n",
     "\n",
-    "# gdf_routesegment = pd.concat([gdf_routesegment_select, gdf_routesegment_others], ignore_index=True)\n",
-    "# gdf_routesegment = gdf_routesegment.reindex(columns = ['RouteUID', 'RouteName_Zh', 'SubRouteUID', 'SubRouteName_Zh', 'Direction', 'StartSeq', 'EndSeq', 'geometry'])\n",
+    "def get_splitroute(gdf_route, gdf_seq, in_both_subrouteUID, \n",
+    "                   routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\")), \n",
+    "                   enable_separate_output = True):\n",
+    "    '''黏貼路網成步驟'''\n",
     "\n",
-    "# print(inspect_route_geometries(gdf_routesegment))\n",
+    "    # 處理SubRouteUID 一致的路線\n",
+    "    gdf_routesegment_select = get_bySubRouteUID(gdf_route, gdf_seq, in_both_subrouteUID)\n",
+    "    if enable_separate_output:\n",
+    "        gdf_routesegment_select.to_file(os.path.join(routesegment_folder, 'BySubRouteUID.shp'), index=False)\n",
     "\n",
-    "# # 輸出\n",
-    "# routesegment_filepath = os.path.join(routesegment_folder, '市區公車拆分.shp')\n",
-    "# gdf_routesegment.to_file(routesegment_filepath, \n",
-    "#                          index=False)\n"
+    "    # 處理只有RouteUID 一致的路線\n",
+    "    gdf_routesegment_others = get_byRouteUID(gdf_route, gdf_seq, in_both_subrouteUID)\n",
+    "    if enable_separate_output:\n",
+    "        gdf_routesegment_others.to_file(os.path.join(routesegment_folder, 'ByRouteUID.shp'), index=False)\n",
+    "\n",
+    "    # 最後合併\n",
+    "    gdf_routesegment = pd.concat([gdf_routesegment_select, gdf_routesegment_others], ignore_index=True)\n",
+    "    gdf_routesegment = gdf_routesegment.reindex(columns = ['RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName', 'Direction', \n",
+    "                                                           'StartSeq', 'OStopName', 'OStopUID', \n",
+    "                                                           'EndSeq', 'DStopName', 'DStopUID', \n",
+    "                                                           'geometry'])\n",
+    "    \n",
+    "\n",
+    "    print(inspect_route_geometries(gdf_routesegment))\n",
+    "\n",
+    "    # 輸出\n",
+    "    routesegment_filepath = os.path.join(routesegment_folder, '市區公車拆分.shp')\n",
+    "    gdf_routesegment.to_file(routesegment_filepath, \n",
+    "                             index=False)\n",
+    "    \n",
+    "    return gdf_routesegment\n",
+    "\n",
+    "def main():\n",
+    "    df_seq = read_seq(busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
+    "    df_route = read_busroute(busroute_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
+    "\n",
+    "    in_both_subrouteUID = check_routes_and_save(df_route = df_route, \n",
+    "                                                df_seq = df_seq, \n",
+    "                                                output_path= os.path.abspath(os.path.join(os.getcwd(), '..', '02_初步分析', '票證及路線數據檢查.txt')))\n",
+    "    \n",
+    "    gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)\n",
+    "\n",
+    "    gdf_routesegment = get_splitroute(gdf_route = gdf_route, \n",
+    "                                  gdf_seq = gdf_seq, \n",
+    "                                  in_both_subrouteUID = in_both_subrouteUID)\n",
+    "    \n",
+    "# if __name__ == \"__main__\":\n",
+    "#     main()"
    ]
   }
  ],
