--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -482,9 +482,16 @@
     "    df_route = df_route.copy()\n",
     "    df_seq = df_seq.copy()\n",
     "    \n",
-    "    df_route[\"Geometry\"] = df_route[\"Geometry\"].apply(wkt.loads) # 將 Geometry 欄位的 WKT 轉為 shapely geometry\n",
-    "    gdf_route = gpd.GeoDataFrame(df_route, geometry=\"Geometry\", crs=\"EPSG:4326\") # 建立 GeoDataFrame\n",
-    "    gdf_route.rename(columns={'Geometry':'geometry'}, inplace=True) \n",
+    "    # df_route[\"Geometry\"] = df_route[\"Geometry\"].apply(wkt.loads) # 將 Geometry 欄位的 WKT 轉為 shapely geometry \n",
+    "    # gdf_route = gpd.GeoDataFrame(df_route, geometry=\"Geometry\", crs=\"EPSG:4326\") # 建立 GeoDataFrame \n",
+    "    # gdf_route.rename(columns={'Geometry':'geometry'}, inplace=True)\n",
+    "\n",
+    "    df_route[\"geometry\"] = df_route[\"Geometry\"].apply(wkt.loads)\n",
+    "    gdf_route = gpd.GeoDataFrame(\n",
+    "        df_route,\n",
+    "        geometry=\"geometry\",\n",
+    "        crs=\"EPSG:4326\"\n",
+    "    )    \n",
     "\n",
     "    gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")\n",
     "\n",
@@ -617,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "7dfa77cc",
    "metadata": {},
    "outputs": [
@@ -625,9 +632,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_22160\\2664174040.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_4044\\1959820469.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_22160\\2664174040.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_4044\\1959820469.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
      ]
     },
@@ -648,16 +655,59 @@
     "                                            df_seq = df_seq, \n",
     "                                            output_path= os.path.abspath(os.path.join(os.getcwd(), '..', '02_初步分析', '票證及路線數據檢查.txt')))\n",
     "\n",
-    "gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)"
+    "gdf_route, gdf_seq = get_gdfroute_gdfseq(df_route, df_seq)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a9920cf5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def snap_points_to_line(stops_gdf, routes_gdf, \n",
+    "                        route_id_col, route_direction_col, \n",
+    "                        seq_routename_col, seq_direction_col, \n",
+    "                        seq_lat_col, seq_lng_col):\n",
+    "    \"\"\"\n",
+    "    將公車站點 (stops_gdf) 投影到公車路線 (routes_gdf) 上，並動態帶入欄位名稱。\n",
+    "    Parameters:\n",
+    "        stops_gdf (GeoDataFrame): 包含公車站點的 GeoDataFrame。\n",
+    "        routes_gdf (GeoDataFrame): 包含公車路線的 GeoDataFrame。\n",
+    "        route_id_col (str): 路線名稱欄位名稱。\n",
+    "        route_direction_col (str): 路線方向欄位名稱。\n",
+    "        seq_routename_col (str): 站點路線名稱欄位名稱。\n",
+    "        seq_direction_col (str): 站點方向欄位名稱。\n",
+    "        seq_lat_col (str): 站點緯度欄位名稱。\n",
+    "        seq_lng_col (str): 站點經度欄位名稱。\n",
+    "    Returns:\n",
+    "        GeoDataFrame: 更新後的公車站點 GeoDataFrame，其中 geometry 已投影到路線。\n",
+    "    \"\"\"\n",
+    "    snapped_points = []\n",
+    "\n",
+    "    for _, stop in stops_gdf.iterrows():\n",
+    "        # 找到與站點路線名稱和方向相符的路線\n",
+    "        matching_route = routes_gdf[(routes_gdf[route_id_col] == stop[seq_routename_col]) & \n",
+    "                                    (routes_gdf[route_direction_col] == stop[seq_direction_col])]\n",
+    "\n",
+    "        if not matching_route.empty:\n",
+    "            # 取出該路線的 geometry\n",
+    "            line = matching_route.iloc[0].geometry\n",
+    "            # 計算站點投影到該路線的最近點\n",
+    "            snapped_point = line.interpolate(line.project(stop.geometry))\n",
+    "            snapped_points.append(snapped_point)\n",
+    "        else:\n",
+    "            # 如果沒有匹配的路線，保持原點\n",
+    "            snapped_points.append(stop.geometry)\n",
+    "\n",
+    "    # 更新站點的 geometry\n",
+    "    stops_gdf = stops_gdf.copy()\n",
+    "    stops_gdf['geometry'] = snapped_points\n",
+    "    stops_gdf[seq_lat_col] = stops_gdf.geometry.y\n",
+    "    stops_gdf[seq_lng_col] = stops_gdf.geometry.x\n",
+    "    return stops_gdf\n",
+    "\n",
+    "\n",
     "def split_routes(busroute_select, seq_select,\n",
     "                 route_id_col='RouteName',\n",
     "                 route_direction_col='Direction',\n",
@@ -718,49 +768,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a0d8f728",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 先處理SubRouteUID 一致的路線\n",
     "gdf_route_selectbySubRouteUID = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
     "gdf_seq_selectbySubRouteUID = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
     "\n",
     "\n",
     "# 將公車站序點位投影到路線上\n",
     "gdf_snapstop_select = snap_points_to_line(gdf_seq_selectbySubRouteUID, gdf_route_selectbySubRouteUID,\n",
-    "                                        route_id_col='SubRouteUID',\n",
-    "                                        route_direction_col='Direction',\n",
-    "                                        seq_id_col='SubRouteUID',\n",
-    "                                        seq_direction_col='Direction',\n",
-    "                                        seq_lat_col='PositionLat',\n",
-    "                                        seq_lng_col='PositionLon')\n"
+    "                                          route_id_col='SubRouteUID',\n",
+    "                                          route_direction_col='Direction',\n",
+    "                                          seq_id_col='SubRouteUID',\n",
+    "                                          seq_direction_col='Direction',\n",
+    "                                          seq_lat_col='PositionLat',\n",
+    "                                          seq_lng_col='PositionLon')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "3300e066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_snapstop_select."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "23b57a6e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m gdf_routesegment_select = \u001b[43msplit_routes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgdf_route_selectbySubRouteUID\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdf_snapstop_select\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mroute_id_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSubRouteUID\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mroute_direction_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDirection\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mseq_id_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSubRouteUID\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mseq_direction_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDirection\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mseq_seq_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mStopSequence\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mseq_lat_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPositionLat\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m                                       \u001b[49m\u001b[43mseq_lng_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPositionLon\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m.set_crs(epsg=\u001b[32m4326\u001b[39m, inplace=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     10\u001b[39m gdf_routesegment_select = gdf_routesegment_select.to_crs(epsg=\u001b[32m3826\u001b[39m) \u001b[38;5;66;03m# 轉換為TWD97的才有辦法進行計算\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 42\u001b[39m, in \u001b[36msplit_routes\u001b[39m\u001b[34m(busroute_select, seq_select, route_id_col, route_direction_col, seq_id_col, seq_direction_col, seq_seq_col, seq_lat_col, seq_lng_col)\u001b[39m\n\u001b[32m     39\u001b[39m end_point = Point(stop_coords[i + \u001b[32m1\u001b[39m])\n\u001b[32m     41\u001b[39m \u001b[38;5;66;03m# 找到站點在路線中的比例位置\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m start_distance = \u001b[43mgeometry\u001b[49m\u001b[43m.\u001b[49m\u001b[43mproject\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_point\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     43\u001b[39m end_distance = geometry.project(end_point)\n\u001b[32m     45\u001b[39m \u001b[38;5;66;03m# 提取路線幾何分段\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\shapely\\decorators.py:173\u001b[39m, in \u001b[36mdeprecate_positional.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    171\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[32m    172\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapper\u001b[39m(*args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m     result = \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    175\u001b[39m     n = \u001b[38;5;28mlen\u001b[39m(args)\n\u001b[32m    176\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m n > warn_from:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\shapely\\geometry\\base.py:923\u001b[39m, in \u001b[36mBaseGeometry.project\u001b[39m\u001b[34m(self, other, normalized)\u001b[39m\n\u001b[32m    913\u001b[39m \u001b[38;5;129m@deprecate_positional\u001b[39m([\u001b[33m\"\u001b[39m\u001b[33mnormalized\u001b[39m\u001b[33m\"\u001b[39m], category=\u001b[38;5;167;01mDeprecationWarning\u001b[39;00m)\n\u001b[32m    914\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mproject\u001b[39m(\u001b[38;5;28mself\u001b[39m, other, normalized=\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m    915\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Return the distance of geometry to a point nearest the specified point.\u001b[39;00m\n\u001b[32m    916\u001b[39m \n\u001b[32m    917\u001b[39m \u001b[33;03m    If the normalized arg is True, return the distance normalized to the\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    920\u001b[39m \u001b[33;03m    Alias of `line_locate_point`.\u001b[39;00m\n\u001b[32m    921\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m    922\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _maybe_unpack(\n\u001b[32m--> \u001b[39m\u001b[32m923\u001b[39m         \u001b[43mshapely\u001b[49m\u001b[43m.\u001b[49m\u001b[43mline_locate_point\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnormalized\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnormalized\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    924\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\shapely\\decorators.py:173\u001b[39m, in \u001b[36mdeprecate_positional.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    171\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[32m    172\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapper\u001b[39m(*args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m     result = \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    175\u001b[39m     n = \u001b[38;5;28mlen\u001b[39m(args)\n\u001b[32m    176\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m n > warn_from:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\shapely\\decorators.py:88\u001b[39m, in \u001b[36mmultithreading_enabled.<locals>.wrapped\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     86\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m arr \u001b[38;5;129;01min\u001b[39;00m array_args:\n\u001b[32m     87\u001b[39m         arr.flags.writeable = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m88\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     89\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m     90\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m arr, old_flag \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(array_args, old_flags):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\shapely\\linear.py:115\u001b[39m, in \u001b[36mline_locate_point\u001b[39m\u001b[34m(line, other, normalized, **kwargs)\u001b[39m\n\u001b[32m    113\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m lib.line_locate_point_normalized(line, other)\n\u001b[32m    114\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m115\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mline_locate_point\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_routesegment_select = split_routes(gdf_route_selectbySubRouteUID, gdf_snapstop_select,\n",
     "                                       route_id_col='SubRouteUID',\n",
@@ -776,27 +819,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "219a049e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['RouteUID', 'RouteID', 'RouteName_Zh', 'RouteName_En', 'SubRouteUID',\n",
-       "       'SubRouteID', 'SubRouteName_Zh', 'SubRouteName_En', 'Direction', 'City',\n",
-       "       'CityCode', 'OperatorID', 'OperatorName_Zh', 'OperatorNo', 'StopUID',\n",
-       "       'StopID', 'StopName_Zh', 'StopName_En', 'StopBoarding', 'StopSequence',\n",
-       "       'PositionLon', 'PositionLat', 'GeoHash', 'StationID', 'StationGroupID',\n",
-       "       'LocationCityCode', 'FilePath', 'geometry'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_seq.columns"
    ]
